--- a/src/styles/constants.scss
+++ b/src/styles/constants.scss
@@ -1,6 +1,6 @@
 $primary: #05668d;
 $secondary: #00a896;
-$background: #f0f3bd;
+$background: #e5e5e5;
 $text-dark: #121212;
 $text-light: #f5f5f5;
 $white: #fff;
