--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -16,3 +16,15 @@
     max-width: 1140px;
   }
 }
+
+.hide-mobile {
+  @media screen and (max-width: 768px) {
+    display: none;
+  }
+}
+
+.hide-desktop {
+  @media screen and (min-width: 768px) {
+    display: none;
+  }
+}
