--- a/src/features/todo/TodoItem/style.scss
+++ b/src/features/todo/TodoItem/style.scss
@@ -8,6 +8,7 @@
   padding: c.$base-padding;
   border-radius: c.$base-padding/4;
   background-color: c.$white;
+  margin: c.$base-padding 0;
 }
 
 .todo__title {
