--- a/src/features/todo/styles.scss
+++ b/src/features/todo/styles.scss
@@ -9,3 +9,46 @@
     padding-right: c.$base-padding;
   }
 }
+
+.form__container {
+  display: flex;
+  flex-direction: column;
+}
+
+.form__group {
+  display: flex;
+  flex-direction: column;
+  padding: c.$base-padding/2 0;
+}
+
+.form__input__label {
+  font-weight: bold;
+  padding: c.$base-padding/4 0;
+}
+
+.form__input--text {
+  width: 100%;
+  padding: c.$base-padding/2;
+  display: inline-block;
+  border: 1px solid c.$primary;
+  border-radius: c.$base-padding/4;
+  box-sizing: border-box;
+}
+.form__input--textarea {
+  width: 100%;
+  padding: c.$base-padding/2;
+  display: inline-block;
+  border: 1px solid c.$primary;
+  border-radius: c.$base-padding/4;
+  box-sizing: border-box;
+  height: 128px;
+}
+
+.form__button-group {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  .btn {
+    margin: 0 c.$base-padding/4;
+  }
+}
