--- a/src/styles/constants.scss
+++ b/src/styles/constants.scss
@@ -4,6 +4,7 @@ $secondary: #00a896;
 $background: #e5e5e5;
 $text-dark: #121212;
 $text-light: #f5f5f5;
+$text-gray: #e5e5e5;
 $white: #fff;
 
 $base-padding: 1rem;
