--- a/src/index.scss
+++ b/src/index.scss
@@ -10,6 +10,11 @@ body {
   background-color: c.$background;
 }
 
+#root {
+  height: 100vh;
+  width: 100%;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
