--- a/src/features/notFound/styles.scss
+++ b/src/features/notFound/styles.scss
@@ -1,10 +1,11 @@
 @use "../../styles/constants.scss" as c;
 
-.notfound__container {
+.notfound {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  height: 80%;
 }
 
 .notfound__title {
